# Nowak-coordination

./: .gitignore  AGENTS.md  ENVIRONMENT_HANDOFF.md  README.md  pyproject.toml
analysis/fixtures/: generate_synthetic.py  synthetic_traces.jsonl
configs/: eval_base_grid.toml  eval_gate4_base_s2101.toml  eval_gate4_base_s2102.toml  eval_gate4_base_s2103.toml  eval_gate4_base_s2104.toml  eval_gate4_base_s2105.toml  eval_gate4_seed_transport_smoke.toml  eval_live_smoke.toml  gate0_model_a_pilot_20260717T190000Z.toml  gate0_model_a_smoke_20260717T190000Z.toml  gate4_sampler_seed_probe.toml  train_model_a_pilot.toml
docs/: ANALYSIS_SPEC.md  CLUSTER_RL_RUNBOOK.md  ENVIRONMENT_SPEC.md  GATE0_RUNTIME_EVIDENCE.md  GATE2_ENVIRONMENT_EVIDENCE.md  GATE3A_DESIGN_REPAIR_EVIDENCE.md  GATE3_ANALYSIS_EVIDENCE.md  GATE4_BASE_CHARACTERIZATION_EVIDENCE.md  GATE4_BASE_CHARACTERIZATION_SPEC.md  GATE4_SAMPLER_SEED_EVIDENCE.md  PROJECT_EXECUTION_PLAN.md
paper-and-plan/: final_plan_v2.md
patches/: prime-rl-disable-trainer-compile.patch  prime-rl-qwen35-fp8-expert-count.patch
scripts/: analyze.py  build_figures.py  probe_vllm_sampler_seed.py  regenerate_synthetic.sh  run_gate4_base.py  run_with_manifest.sh  setup_gpu_env.sh  validate_traces.py
src/donor_coord_v1/: __init__.py
src/nowak_coordination/: __init__.py  environment.py  game.py  gate4_registry.py  mechanics.py  partners.py  rewards.py  run_manifest.py  seeded_eval.py  smoke.py  (+1 more)
tests/: test_environment.py  test_game.py  test_gate3_pipeline.py  test_mechanics.py  test_partners.py  test_rewards.py  test_smoke.py
(+13 files in other folders)
